--- a/Substation Builder/Pages/DatabaseView/TheveninPage.xaml
+++ b/Substation Builder/Pages/DatabaseView/TheveninPage.xaml
@@ -18,62 +18,59 @@
                 </BeginStoryboard>
             </EventTrigger>
         </StackPanel.Triggers>
-        <Label Content="Thevenin" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="22"/>
 
-        <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
+        <StackPanel>
+            <Label Content="Thevenin" Margin="4,-10,0,10" Opacity="0.9" FontSize="22" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
 
-            <StackPanel>
 
-                <DockPanel>
-                    <Label Width="50" Content="Name:" Opacity="0.9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,5,0" FontSize="14"/>
-                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Opacity="0.9" FontSize="16" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-                </DockPanel>
+            <DockPanel>
+                <Label Width="50" Content="Name:" Opacity="0.9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,5,0" FontSize="14"/>
+                <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Opacity="0.9" FontSize="16" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            </DockPanel>
 
-                <DockPanel>
-                    <Label Content="Units:" Opacity="0.9" FontSize="16" Margin="0,5,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
-                    <RadioButton  GroupName="TheveninUnits" x:Name="UseZ" Content="%Z" IsChecked="True" Margin="5,5,0,0" FontSize="16" VerticalContentAlignment="Stretch" Padding="3,0,0,0" Width="80" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                    <RadioButton  GroupName="TheveninUnits" x:Name="UseOhm" Content="Ohms" Margin="7,5,0,0" FontSize="16" VerticalContentAlignment="Center" Padding="5,0,0,0" Width="80" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                </DockPanel>
+            <DockPanel>
+                <Label Content="Units:" Opacity="0.9" FontSize="16" Margin="0,5,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
+                <RadioButton  GroupName="TheveninUnits" x:Name="UseZ" Content="%Z" IsChecked="True" Margin="5,5,0,0" FontSize="16" VerticalContentAlignment="Stretch" Padding="3,0,0,0" Width="80" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <RadioButton  GroupName="TheveninUnits" x:Name="UseOhm" Content="Ohms" Margin="7,5,0,0" FontSize="16" VerticalContentAlignment="Center" Padding="5,0,0,0" Width="80" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            </DockPanel>
 
-                <DockPanel>
-                    <Label Content="R1:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
-                    <TextBox Text="{Binding R1_Z, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
-                    <TextBox Text="{Binding R1_Ohms, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="16" Margin="7,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
-                </DockPanel>
+            <DockPanel>
+                <Label Content="R1:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding R1_Z, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
+                <TextBox Text="{Binding R1_Ohms, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="16" Margin="7,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
+            </DockPanel>
 
-                <DockPanel>
-                    <Label Content="X1:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
-                    <TextBox Text="{Binding X1_Z, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
-                    <TextBox Text="{Binding X1_Ohms, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="16" Margin="7,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
-                </DockPanel>
+            <DockPanel>
+                <Label Content="X1:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding X1_Z, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
+                <TextBox Text="{Binding X1_Ohms, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="16" Margin="7,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
+            </DockPanel>
 
-                <DockPanel>
-                    <Label Content="R2:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
-                    <TextBox Text="{Binding R2_Z, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
-                    <TextBox Text="{Binding R2_Ohms, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="16" Margin="7,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
-                </DockPanel>
+            <DockPanel>
+                <Label Content="R2:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding R2_Z, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
+                <TextBox Text="{Binding R2_Ohms, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="16" Margin="7,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
+            </DockPanel>
 
-                <DockPanel>
-                    <Label Content="X2:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
-                    <TextBox Text="{Binding X2_Z, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
-                    <TextBox Text="{Binding X2_Ohms, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="16" Margin="7,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
-                </DockPanel>
+            <DockPanel>
+                <Label Content="X2:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding X2_Z, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
+                <TextBox Text="{Binding X2_Ohms, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="16" Margin="7,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
+            </DockPanel>
 
-                <DockPanel>
-                    <Label Content="R0:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
-                    <TextBox Text="{Binding R0_Z, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
-                    <TextBox Text="{Binding R0_Ohms, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="16" Margin="7,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
-                </DockPanel>
+            <DockPanel>
+                <Label Content="R0:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding R0_Z, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
+                <TextBox Text="{Binding R0_Ohms, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="16" Margin="7,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
+            </DockPanel>
 
-                <DockPanel>
-                    <Label Content="X0:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
-                    <TextBox Text="{Binding X0_Z, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
-                    <TextBox Text="{Binding X0_Ohms, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="16" Margin="7,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
-                </DockPanel>
+            <DockPanel>
+                <Label Content="X0:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" HorizontalContentAlignment="Right" Width="50" Padding="0" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding X0_Z, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
+                <TextBox Text="{Binding X0_Ohms, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="16" Margin="7,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="85"/>
+            </DockPanel>
 
-            </StackPanel>
-
-        </Border>
+        </StackPanel>
 
     </StackPanel>
 
