--- a/Substation Builder/Pages/DatabaseView/CTMenuPage.xaml
+++ b/Substation Builder/Pages/DatabaseView/CTMenuPage.xaml
@@ -8,11 +8,6 @@
       xmlns:vm="clr-namespace:Substation_Builder.ViewModel"
       mc:Ignorable="d" 
       Title="CTMenuView">
-
-    <Page.DataContext>
-        <vm:DatabaseViewModel/>
-    </Page.DataContext>
-
     <StackPanel>
 
         <StackPanel.Triggers>
@@ -25,62 +20,61 @@
             </EventTrigger>
         </StackPanel.Triggers>
 
+        <Label Content="CT Connection" Margin="4,-10,0,10" Opacity="0.9" FontSize="22" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+
         <StackPanel>
-            <Label Content="Select CT" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="16"/>
-            <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
+            <DockPanel HorizontalAlignment="Left">
 
-                <DockPanel HorizontalAlignment="Left">
+                <TreeView Grid.Row="1" x:Name="treeview" ItemsSource="{Binding Project}" VerticalAlignment="Top" FontSize="16">
 
-                    <TreeView Grid.Row="1" x:Name="treeview" ItemsSource="{Binding Project}" VerticalAlignment="Top" FontSize="16">
+                    <TreeViewItem x:Name="Subdata" Header="{Binding Project.Name}" ItemsSource="{Binding Project}">
 
-                        <TreeViewItem x:Name="Subdata" Header="{Binding Project.Name}" ItemsSource="{Binding Project}">
-
-                            <!-- This is the Header and Treeview Items for Thevenin-->
-                            <TreeViewItem Header='Thevenins' ItemsSource="{Binding Project.Thevenins}">
-                                <!-- This is the treeview Items for Thevenin-->
-                                <TreeViewItem.ItemTemplate>
-                                    <HierarchicalDataTemplate>
-                                        <TextBlock Text="{Binding Name}"/>
-                                    </HierarchicalDataTemplate>
-                                </TreeViewItem.ItemTemplate>
-                            </TreeViewItem>
-
-                            <!-- This is the Header and Transformers-->
-                            <TreeViewItem Header="Transformers" ItemsSource="{Binding Project.Transformers}">
-                                <TreeViewItem.ItemTemplate>
-                                    <HierarchicalDataTemplate ItemsSource="{Binding CTs}">
-                                        <TextBlock Text="{Binding Name}"/>
-                                    </HierarchicalDataTemplate>
-                                </TreeViewItem.ItemTemplate>
-                            </TreeViewItem>
-
-                            <!-- This is the Header and Breakers-->
-                            <TreeViewItem Header="Breakers" ItemsSource="{Binding Project.Breakers}">
-                                <!-- This is the treeview Items for Breaker-->
-                                <TreeViewItem.ItemTemplate>
-                                    <HierarchicalDataTemplate ItemsSource="{Binding CTs}">
-                                        <TextBlock Text="{Binding Name}"/>
-                                    </HierarchicalDataTemplate>
-                                </TreeViewItem.ItemTemplate>
-                            </TreeViewItem>
-
-                            <!-- This is the Header and Treeview Items for Relay-->
-                            <TreeViewItem Header='Relays' ItemsSource="{Binding Project.Relays}">
-                                <!-- This is the reeview Items for Relay-->
-                                <TreeViewItem.ItemTemplate>
-                                    <HierarchicalDataTemplate>
-                                        <TextBlock Text="{Binding Name}"/>
-                                    </HierarchicalDataTemplate>
-                                </TreeViewItem.ItemTemplate>
-                            </TreeViewItem>
+                        <!-- This is the Header and Treeview Items for Thevenin-->
+                        <TreeViewItem Header='Thevenins' ItemsSource="{Binding Project.Thevenins}">
+                            <!-- This is the treeview Items for Thevenin-->
+                            <TreeViewItem.ItemTemplate>
+                                <HierarchicalDataTemplate>
+                                    <TextBlock Text="{Binding Name}"/>
+                                </HierarchicalDataTemplate>
+                            </TreeViewItem.ItemTemplate>
                         </TreeViewItem>
 
-                    </TreeView>
+                        <!-- This is the Header and Transformers-->
+                        <TreeViewItem Header="Transformers" ItemsSource="{Binding Project.Transformers}">
+                            <TreeViewItem.ItemTemplate>
+                                <HierarchicalDataTemplate ItemsSource="{Binding CTs}">
+                                    <TextBlock Text="{Binding Name}"/>
+                                </HierarchicalDataTemplate>
+                            </TreeViewItem.ItemTemplate>
+                        </TreeViewItem>
 
-                    <Button Content="Connect" Margin="5,5,5,0" FontSize="11" Padding="10" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" MinHeight="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <!-- This is the Header and Breakers-->
+                        <TreeViewItem Header="Breakers" ItemsSource="{Binding Project.Breakers}">
+                            <!-- This is the treeview Items for Breaker-->
+                            <TreeViewItem.ItemTemplate>
+                                <HierarchicalDataTemplate ItemsSource="{Binding CTs}">
+                                    <TextBlock Text="{Binding Name}"/>
+                                </HierarchicalDataTemplate>
+                            </TreeViewItem.ItemTemplate>
+                        </TreeViewItem>
 
-                </DockPanel>
-            </Border>
+                        <!-- This is the Header and Treeview Items for Relay-->
+                        <TreeViewItem Header='Relays' ItemsSource="{Binding Project.Relays}">
+                            <!-- This is the reeview Items for Relay-->
+                            <TreeViewItem.ItemTemplate>
+                                <HierarchicalDataTemplate>
+                                    <TextBlock Text="{Binding Name}"/>
+                                </HierarchicalDataTemplate>
+                            </TreeViewItem.ItemTemplate>
+                        </TreeViewItem>
+                    </TreeViewItem>
+
+                </TreeView>
+
+                <Button Content="Connect" Margin="5,5,5,0" FontSize="11" Padding="10" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" MinHeight="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
+            </DockPanel>
+
         </StackPanel>
 
 
