--- a/Substation Builder/Pages/DatabaseView/Transformer2Page.xaml
+++ b/Substation Builder/Pages/DatabaseView/Transformer2Page.xaml
@@ -19,72 +19,71 @@
             </EventTrigger>
         </StackPanel.Triggers>
 
-        <Label Content="Transformer" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="22"/>
-        <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
+        <StackPanel>
+            <Label Content="Transformer" Margin="4,-10,0,10" Opacity="0.9" FontSize="22" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
 
-            <StackPanel>
 
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-                    <StackPanel Grid.Column="0">
+                <StackPanel Grid.Column="0">
 
-                        <DockPanel>
-                            <Label Content="Z1%:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" Width="100" Padding="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-                            <TextBox Text="{Binding Z1}" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="60" HorizontalAlignment="Left"/>
-                        </DockPanel>
+                    <DockPanel>
+                        <Label Content="Z1%:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" Width="100" Padding="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
+                        <TextBox Text="{Binding Z1}" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="60" HorizontalAlignment="Left"/>
+                    </DockPanel>
 
-                        <DockPanel>
-                            <Label Content="Z0%:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" Width="100" Padding="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-                            <TextBox Text="{Binding Z0}" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="60" HorizontalAlignment="Left"/>
-                        </DockPanel>
+                    <DockPanel>
+                        <Label Content="Z0%:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" Width="100" Padding="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
+                        <TextBox Text="{Binding Z0}" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="60" HorizontalAlignment="Left"/>
+                    </DockPanel>
 
-                        <DockPanel>
-                            <Label Content="Losses (kW):" Opacity="0.9" FontSize="16" Margin="0,0,5,0" Width="100" Padding="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-                            <TextBox Text="{Binding Losses}" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="60" HorizontalAlignment="Left"/>
-                        </DockPanel>
+                    <DockPanel>
+                        <Label Content="Losses (kW):" Opacity="0.9" FontSize="16" Margin="0,0,5,0" Width="100" Padding="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
+                        <TextBox Text="{Binding Losses}" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="60" HorizontalAlignment="Left"/>
+                    </DockPanel>
 
-                        <DockPanel Margin="0,10,0,0" >
-                            <RadioButton Content="%Z" Name="XFUseZ" VerticalContentAlignment="Center" Padding="10,0,0,0" Margin="10,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Stretch" FontSize="16" IsChecked="True"/>
-                            <RadioButton Content="Ohms" Name="XFUseOhm" Margin="10,0,0,0" VerticalContentAlignment="Center" Padding="10,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Stretch" FontSize="16"/>
-                        </DockPanel>
+                    <DockPanel Margin="0,10,0,0" >
+                        <RadioButton Content="%Z" Name="XFUseZ" VerticalContentAlignment="Center" Padding="10,0,0,0" Margin="10,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Stretch" FontSize="16" IsChecked="True"/>
+                        <RadioButton Content="Ohms" Name="XFUseOhm" Margin="10,0,0,0" VerticalContentAlignment="Center" Padding="10,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Stretch" FontSize="16"/>
+                    </DockPanel>
 
-                    </StackPanel>
+                </StackPanel>
 
-                    <StackPanel Grid.Column="1">
+                <StackPanel Grid.Column="1">
 
-                        <DockPanel>
-                            <Label Content="R1:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" VerticalContentAlignment="Center" Width="50" Padding="0" HorizontalContentAlignment="Right"/>
-                            <TextBox Text="{Binding R1}" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" Width="60" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
-                        </DockPanel>
+                    <DockPanel>
+                        <Label Content="R1:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" VerticalContentAlignment="Center" Width="50" Padding="0" HorizontalContentAlignment="Right"/>
+                        <TextBox Text="{Binding R1}" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" Width="60" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
+                    </DockPanel>
 
-                        <DockPanel>
-                            <Label Content="X1:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" VerticalContentAlignment="Center" Width="50" Padding="0" HorizontalContentAlignment="Right"/>
-                            <TextBox Text="{Binding X1}" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" Width="60" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
-                        </DockPanel>
+                    <DockPanel>
+                        <Label Content="X1:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" VerticalContentAlignment="Center" Width="50" Padding="0" HorizontalContentAlignment="Right"/>
+                        <TextBox Text="{Binding X1}" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" Width="60" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
+                    </DockPanel>
 
-                        <DockPanel>
-                            <Label Content="R0:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" VerticalContentAlignment="Center" Width="50" Padding="0" HorizontalContentAlignment="Right"/>
-                            <TextBox Text="{Binding R0}" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" Width="60" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
-                        </DockPanel>
+                    <DockPanel>
+                        <Label Content="R0:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" VerticalContentAlignment="Center" Width="50" Padding="0" HorizontalContentAlignment="Right"/>
+                        <TextBox Text="{Binding R0}" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" Width="60" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
+                    </DockPanel>
 
-                        <DockPanel>
-                            <Label Content="X0:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" VerticalContentAlignment="Center" Width="50" Padding="0" HorizontalContentAlignment="Right"/>
-                            <TextBox Text="{Binding X0}" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" Width="60" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
-                        </DockPanel>
+                    <DockPanel>
+                        <Label Content="X0:" Opacity="0.9" FontSize="16" Margin="0,0,5,0" VerticalContentAlignment="Center" Width="50" Padding="0" HorizontalContentAlignment="Right"/>
+                        <TextBox Text="{Binding X0}" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" Width="60" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
+                    </DockPanel>
 
-                    </StackPanel>
+                </StackPanel>
 
-                </Grid>
+            </Grid>
 
-                <DockPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,5,0,0">
-                    <Button Content="Nameplate Data" Margin="5,5,5,0" Click="Button_Click" FontSize="14" Padding="10" VerticalAlignment="Center" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch"/>
-                </DockPanel>
+            <DockPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,5,0,0">
+                <Button Content="Nameplate Data" Margin="5,5,5,0" Click="Button_Click" FontSize="14" Padding="10" VerticalAlignment="Center" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch"/>
+            </DockPanel>
 
-            </StackPanel>
-        </Border>
+        </StackPanel>
+
     </StackPanel>
 </Page>
