--- a/Substation Builder/View/DatabaseView.xaml
+++ b/Substation Builder/View/DatabaseView.xaml
@@ -1,21 +1,18 @@
 ﻿<Controls:MetroWindow
-                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                      xmlns:mah="http://metro.mahapps.com/winfx/xaml/shared"
-                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                      xmlns:Helpers="clr-namespace:Substation_Builder.Helpers"
-                      xmlns:Global="clr-namespace:Substation_Builder"
-                      xmlns:Model="clr-namespace:Substation_Builder.Model"
-                      xmlns:System="clr-namespace:Microsoft.VisualBasic;assembly=System"
-                      xmlns:vm="clr-namespace:Substation_Builder.ViewModel"
-                      xmlns:local="clr-namespace:Substation_Builder.View" x:Name="Database" x:Class="Substation_Builder.View.DatabaseView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/shared"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+    xmlns:Helpers="clr-namespace:Substation_Builder.Helpers"
+
+    x:Name="Database" x:Class="Substation_Builder.View.DatabaseView"
                       mc:Ignorable="d"
                       Icon="..\Resources\Images\MainPageIcon.jpg"    
                       Title="Database" ResizeMode="CanResizeWithGrip"
                       WindowStartupLocation="Manual"
-                      BorderThickness="0" Height="400" Width="700" MinWidth="700" MinHeight="400">
+                      BorderThickness="0" Height="400" Width="700" MinWidth="700" MinHeight="400" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
 
     <Controls:MetroWindow.Resources>
         <mah:StringToVisibilityConverter x:Key="StringToVisibilityConverter"/>
@@ -23,29 +20,61 @@
             <Setter Property="Controls:ControlsHelper.HeaderFontSize" Value="15"/>
         </Style>
 
+        <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource {x:Type TreeViewItem}}">
+            <Setter Property="Background" Value="{x:Null}"/>
+        </Style>
+
         <Helpers:BindingProxy x:Key="DataContextProxy" Data="{Binding}"/>
 
         <!-- Remove Context Menu for Items in the control-->
         <!-- Incredibly evil as the contextmenu does not share the same datacontext as the treeview so the proxy is employed-->
         <ContextMenu x:Key="RemoveItemContext" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
-            <MenuItem Header="Delete Item" Command="{Binding Data.RemoveItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="{Binding}"/>
+            <MenuItem Header="Delete Item" Command="{Binding Data.RemoveItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="{Binding}" FontSize="22"/>
         </ContextMenu>
 
         <ContextMenu x:Key="AddTheveninContext" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
-            <MenuItem Header="Add Thevenin" Command="{Binding Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Thevenin"/>
+            <MenuItem Header="Add Thevenin" Command="{Binding Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Thevenin" FontSize="22"/>
         </ContextMenu>
 
         <ContextMenu x:Key="AddTransformerContext" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
-            <MenuItem Header="Add Transformer" Command="{Binding Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Transformer"/>
+            <MenuItem Header="Add Transformer" Command="{Binding Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Transformer" FontSize="22"/>
         </ContextMenu>
 
         <ContextMenu x:Key="AddRelayContext" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
-            <MenuItem Header="Add Relay" Command="{Binding Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Relay"/>
+            <MenuItem Header="Add Relay" Command="{Binding Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Relay" FontSize="22"/>
         </ContextMenu>
 
         <ContextMenu x:Key="AddBreakerContext" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
-            <MenuItem Header="Add Breaker" Command="{Binding Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Breaker"/>
+            <MenuItem Header="Add Breaker" Command="{Binding Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Breaker" FontSize="22"/>
         </ContextMenu>
+
+        <!--Hamberger Helper Template LOL-->
+        <DataTemplate x:Key="MenuItemTemplate" DataType="{x:Type Controls:HamburgerMenuGlyphItem}">
+            <Grid Margin="8,5" Height="30" HorizontalAlignment="Left">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="30" />
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <Border BorderThickness="1" BorderBrush="White" Padding="0" Margin="0">
+                    <Rectangle Grid.Column="0" Height="20" Width="20">
+                        <Rectangle.Fill>
+                            <VisualBrush Visual="{Binding Icon}" Stretch="Uniform"/>
+                        </Rectangle.Fill>
+                    </Rectangle>
+                </Border>
+
+                <TextBlock 
+                    Grid.Column="1"
+                    VerticalAlignment="Center"
+                    FontSize="18"
+                    Foreground="White"
+                    Text="{Binding Label}" 
+                    HorizontalAlignment="Stretch" 
+                    Margin="15,0,0,0"/>
+
+            </Grid>
+        </DataTemplate>
     </Controls:MetroWindow.Resources>
 
     <Controls:MetroWindow.TitleTemplate>
@@ -58,7 +87,7 @@
     </Controls:MetroWindow.TitleTemplate>
 
     <Controls:MetroWindow.Background>
-        <ImageBrush ImageSource="..\Resources/Images/Chiyome_Mochizuki.jpg" Opacity="0.25" Stretch="UniformToFill">
+        <ImageBrush ImageSource="..\Resources/Images/Chiyome_Mochizuki.jpg" Opacity="0.4" Stretch="UniformToFill">
             <ImageBrush.RelativeTransform>
                 <TransformGroup>
                     <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleY="1" ScaleX="1"/>
@@ -72,81 +101,104 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <ScrollViewer>
-            <Viewbox VerticalAlignment="Top">
+        <Border Grid.Column="0" BorderThickness="2" CornerRadius="10" Margin="58,20,0,20" Padding="0" BorderBrush="#FF9C9595">
+            <Border.Background>
+                <SolidColorBrush Color="Black" Opacity="0.4"/>
+            </Border.Background>
 
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="30"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
+            <TreeView x:Name="treeview" ItemsSource="{Binding Project}" SelectedItemChanged="LoadPage" FontSize="16" VerticalAlignment="Top" VerticalContentAlignment="Top" HorizontalContentAlignment="Left" Padding="10" Margin="5,20,5,5" Background="{x:Null}" BorderBrush="{x:Null}">
 
-                    <ToolBarTray ToolBarTray.IsLocked="True">
-                        <ToolBar FontSize="16" Margin="8,0,0,0">
-                            <Button Content="New"  Command="{Binding AddItemCommand}" CommandParameter="Project" Margin="3,0,0,0"/>
-                            <Button Content="Open" Command="{Binding LoadCommand}" Margin="3,0,0,0"/>
-                            <Button Content="Save" Command="{Binding SaveCommand}" Margin="3,0,0,0"/>
-                            <Button Content="Add CT" Command="{Binding AddCTCommand}" CommandParameter="{Binding SelectedItem, ElementName=treeview, Mode=Default}" Margin="3,0,0,0"/>
-                            <Button Content="Template" Command="{Binding TemplateCommand}" Margin="3,0,0,0"/>
-                        </ToolBar>
-                    </ToolBarTray>
+                <TreeViewItem x:Name="Subdata" Header="{Binding Project.Name}" ItemsSource="{Binding Project}">
 
-                    <TreeView Grid.Row="1" x:Name="treeview" ItemsSource="{Binding Project}" VerticalAlignment="Top" SelectedItemChanged="LoadPage" FontSize="16">
+                    <!-- This is the Header and Treeview Items for Thevenin-->
+                    <TreeViewItem Header='Thevenins' ItemsSource="{Binding Project.Thevenins}" ContextMenu="{StaticResource AddTheveninContext}">
+                        <!-- This is the treeview Items for Thevenin-->
+                        <TreeViewItem.ItemTemplate>
+                            <HierarchicalDataTemplate>
+                                <TextBlock Text="{Binding Name}" PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown" ContextMenu="{StaticResource RemoveItemContext}"/>
+                            </HierarchicalDataTemplate>
+                        </TreeViewItem.ItemTemplate>
+                    </TreeViewItem>
 
-                        <TreeViewItem x:Name="Subdata" Header="{Binding Project.Name}" ItemsSource="{Binding Project}">
-                            <!-- This is the Header and Treeview Items for Thevenin-->
-                            <TreeViewItem Header='Thevenins' ItemsSource="{Binding Project.Thevenins}" ContextMenu="{StaticResource AddTheveninContext}">
-                                <!-- This is the treeview Items for Thevenin-->
-                                <TreeViewItem.ItemTemplate>
-                                    <HierarchicalDataTemplate>
-                                        <TextBlock Text="{Binding Name}" PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown" ContextMenu="{StaticResource RemoveItemContext}"/>
-                                    </HierarchicalDataTemplate>
-                                </TreeViewItem.ItemTemplate>
-                            </TreeViewItem>
+                    <!-- This is the Header and Transformers-->
+                    <TreeViewItem Header="Transformers" ItemsSource="{Binding Project.Transformers}" ContextMenu="{StaticResource AddTransformerContext}">
+                        <TreeViewItem.ItemTemplate>
+                            <HierarchicalDataTemplate ItemsSource="{Binding CTs}">
+                                <TextBlock Text="{Binding Name}" PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown" ContextMenu="{StaticResource RemoveItemContext}"/>
+                            </HierarchicalDataTemplate>
+                        </TreeViewItem.ItemTemplate>
+                    </TreeViewItem>
 
-                            <!-- This is the Header and Transformers-->
-                            <TreeViewItem Header="Transformers" ItemsSource="{Binding Project.Transformers}" ContextMenu="{StaticResource AddTransformerContext}">
-                                <TreeViewItem.ItemTemplate>
-                                    <HierarchicalDataTemplate ItemsSource="{Binding CTs}">
-                                        <TextBlock Text="{Binding Name}" PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown" ContextMenu="{StaticResource RemoveItemContext}"/>
-                                    </HierarchicalDataTemplate>
-                                </TreeViewItem.ItemTemplate>
-                            </TreeViewItem>
+                    <!-- This is the Header and Breakers-->
+                    <TreeViewItem Header="Breakers" ItemsSource="{Binding Project.Breakers}" ContextMenu="{StaticResource AddBreakerContext}">
+                        <!-- This is the treeview Items for Breaker-->
+                        <TreeViewItem.ItemTemplate>
+                            <HierarchicalDataTemplate ItemsSource="{Binding CTs}">
+                                <TextBlock Text="{Binding Name}" PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown" ContextMenu="{StaticResource RemoveItemContext}"/>
+                            </HierarchicalDataTemplate>
+                        </TreeViewItem.ItemTemplate>
+                    </TreeViewItem>
 
-                            <!-- This is the Header and Breakers-->
-                            <TreeViewItem Header="Breakers" ItemsSource="{Binding Project.Breakers}" ContextMenu="{StaticResource AddBreakerContext}">
-                                <!-- This is the treeview Items for Breaker-->
-                                <TreeViewItem.ItemTemplate>
-                                    <HierarchicalDataTemplate ItemsSource="{Binding CTs}">
-                                        <TextBlock Text="{Binding Name}" PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown" ContextMenu="{StaticResource RemoveItemContext}"/>
-                                    </HierarchicalDataTemplate>
-                                </TreeViewItem.ItemTemplate>
-                            </TreeViewItem>
+                    <!-- This is the Header and Treeview Items for Relay-->
+                    <TreeViewItem Header='Relays' ItemsSource="{Binding Project.Relays}" ContextMenu="{StaticResource AddRelayContext}">
+                        <!-- This is the reeview Items for Relay-->
+                        <TreeViewItem.ItemTemplate>
+                            <HierarchicalDataTemplate>
+                                <TextBlock Text="{Binding Name}" PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown" ContextMenu="{StaticResource RemoveItemContext}"/>
+                            </HierarchicalDataTemplate>
+                        </TreeViewItem.ItemTemplate>
+                    </TreeViewItem>
 
-                            <!-- This is the Header and Treeview Items for Relay-->
-                            <TreeViewItem Header='Relays' ItemsSource="{Binding Project.Relays}" ContextMenu="{StaticResource AddRelayContext}">
-                                <!-- This is the reeview Items for Relay-->
-                                <TreeViewItem.ItemTemplate>
-                                    <HierarchicalDataTemplate>
-                                        <TextBlock Text="{Binding Name}" PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown" ContextMenu="{StaticResource RemoveItemContext}"/>
-                                    </HierarchicalDataTemplate>
-                                </TreeViewItem.ItemTemplate>
-                            </TreeViewItem>
-                        </TreeViewItem>
+                </TreeViewItem>
 
-                    </TreeView>
+            </TreeView>
+        </Border>
 
-                </Grid>
+        <Controls:HamburgerMenu Grid.Column="0" x:Name="HamburgerMenuControl" 
+                                ItemTemplate="{StaticResource MenuItemTemplate}" 
+                                OptionsItemTemplate="{StaticResource MenuItemTemplate}" 
+                                ContentTransition="Default" 
+                                OpenPaneLength="220" ForceCursor="False" Margin="0" HorizontalAlignment="Left" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="-1,0,0,0">
+
+        <Controls:HamburgerMenu.PaneBackground>
+                <SolidColorBrush Color="Black" Opacity="0.4"/>
+            </Controls:HamburgerMenu.PaneBackground>
+
+            <!--  Items  -->
+            <Controls:HamburgerMenu.ItemsSource>
+                <Controls:HamburgerMenuItemCollection>
+
+                    <Controls:HamburgerMenuIconItem Icon="{StaticResource appbar_disk_upload}" Label="Load Project" Command="{Binding LoadCommand}"/>
+                    <Controls:HamburgerMenuIconItem Icon="{StaticResource appbar_disk_download}" Label="Save Project" Command="{Binding SaveCommand}"/>
+                    <Controls:HamburgerMenuIconItem Icon="{StaticResource appbar_diagram}" Label="Template Substation" Command="{Binding TemplateCommand}"/>
+                    <Controls:HamburgerMenuIconItem Icon="{StaticResource appbar_page_new}" Label="New Project" Command="{Binding NewProject}"/>
+                    <Controls:HamburgerMenuIconItem Icon="{StaticResource appbar_add}" Label="Add Item" Command="{Binding AddItemCommand}" CommandParameter="{Binding SelectedItem, ElementName=treeview, Mode=Default}"/>
+                    <Controls:HamburgerMenuIconItem Icon="{StaticResource appbar_minus}" Label="Delete Item" Command="{Binding RemoveItem}" CommandParameter="{Binding SelectedItem, ElementName=treeview, Mode=Default}"/>
+                </Controls:HamburgerMenuItemCollection>
+
+            </Controls:HamburgerMenu.ItemsSource>
+
+            <!--  Options  -->
+            <Controls:HamburgerMenu.OptionsItemsSource>
+                <Controls:HamburgerMenuItemCollection>
+                    <Controls:HamburgerMenuIconItem Icon="{StaticResource appbar_cog}" Label="About"/>
+                </Controls:HamburgerMenuItemCollection>
+            </Controls:HamburgerMenu.OptionsItemsSource>
+
+        </Controls:HamburgerMenu>
+
+        <Border Grid.Column="1" BorderThickness="2" CornerRadius="10" Margin="10,20" Padding="0" BorderBrush="#FF9C9595">
+            <Border.Background>
+                <SolidColorBrush Color="Black" Opacity="0.4"/>
+            </Border.Background>
+            <Viewbox Margin="20">
+                <Frame x:Name="pagenavigation" NavigationUIVisibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Center" />
             </Viewbox>
-
-        </ScrollViewer>
-        <Viewbox Grid.Column="1">
-            <Frame x:Name="pagenavigation" NavigationUIVisibility="Hidden" Margin="10"/>
-        </Viewbox>
+        </Border>
 
     </Grid>
 
