--- a/Substation Builder/App.xaml
+++ b/Substation Builder/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="Substation_Builder.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:Model="clr-namespace:Substation_Builder.Model"
-             StartupUri="View\MainWindowView.xaml">
+             StartupUri="View\MainWindowView.xaml"
+             ShutdownMode="OnMainWindowClose">
     <Application.Resources>
         
         <ResourceDictionary>
