--- a/Substation Builder/View/MainWindowView.xaml
+++ b/Substation Builder/View/MainWindowView.xaml
@@ -1,15 +1,14 @@
-﻿<Controls:MetroWindow x:Name="metroWindow" x:Class="Substation_Builder.View.MainWindowView"
+﻿<Controls:MetroWindow x:Name="MainWindow" x:Class="Substation_Builder.View.MainWindowView"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:mah="http://metro.mahapps.com/winfx/xaml/shared"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                      xmlns:model="clr-namespace:Substation_Builder.Model"
                       xmlns:vm="clr-namespace:Substation_Builder.ViewModel"
                       mc:Ignorable="d"
                       Icon="..\Resources\Images\MainPageIcon.jpg"    
-                      Title="Substaion Builder" Height="578" Width="680" ResizeMode="CanMinimize"
+                      Title="Substation Builder" Height="578" Width="680" ResizeMode="CanMinimize"
                       WindowStartupLocation="CenterScreen"
                       BorderThickness="0" HorizontalAlignment="Center">
 
@@ -96,6 +95,25 @@
                         </DockPanel>
 
                         <DockPanel>
+                            <Rectangle Margin="0" Height="{Binding ActualHeight, ElementName=tile6, Mode=OneWay}" Width="{Binding ActualHeight, ElementName=tile6, Mode=OneWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Rectangle.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform ScaleX="0.8" ScaleY="0.8"/>
+                                        <SkewTransform/>
+                                        <RotateTransform/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </Rectangle.RenderTransform>
+                                <Rectangle.Fill>
+                                    <VisualBrush Visual="{StaticResource appbar_diagram}" Stretch="Uniform"/>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                            <Controls:Tile x:Name="tile6" Margin="5" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" VerticalAlignment="Center" Command="{Binding OnelineViewOpenCommand, Mode=OneWay}">
+                                <TextBlock Margin="10,10,15,10" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="26">One Line</TextBlock>
+                            </Controls:Tile>
+                        </DockPanel>
+
+                        <DockPanel>
                             <Rectangle Margin="0" Height="{Binding ActualHeight, ElementName=tile2, Mode=OneWay}" Width="{Binding ActualHeight, ElementName=tile2, Mode=OneWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
                                 <Rectangle.RenderTransform>
                                     <TransformGroup>
@@ -171,24 +189,7 @@
                             </Controls:Tile>
                         </DockPanel>
 
-                        <DockPanel>
-                            <Rectangle Margin="0" Height="{Binding ActualHeight, ElementName=tile6, Mode=OneWay}" Width="{Binding ActualHeight, ElementName=tile6, Mode=OneWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                <Rectangle.RenderTransform>
-                                    <TransformGroup>
-                                        <ScaleTransform ScaleX="0.8" ScaleY="0.8"/>
-                                        <SkewTransform/>
-                                        <RotateTransform/>
-                                        <TranslateTransform/>
-                                    </TransformGroup>
-                                </Rectangle.RenderTransform>
-                                <Rectangle.Fill>
-                                    <VisualBrush Visual="{StaticResource appbar_fan_box}" Stretch="Uniform"/>
-                                </Rectangle.Fill>
-                            </Rectangle>
-                            <Controls:Tile x:Name="tile6" Margin="5" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" VerticalAlignment="Center">
-                                <TextBlock Margin="10,10,15,10" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="26">Generator Tools</TextBlock>
-                            </Controls:Tile>
-                        </DockPanel>
+
                     </StackPanel>
                 </Viewbox>
 
